fix login scrollbar

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 
 body {
   background-image: url("./image/login.jpeg");
+  overflow: auto;
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-height: 100vh;
 }
 
 .navbar {
@@ -28,24 +32,31 @@ body {
   margin-left: 30px;
 }
 
+.Main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 .logo {
   width: 350px;
   height: 350px;
-  margin-top: 80px;
-  display: block;
+  margin-top: 1vh;
+  display: inline;
   margin-left: auto;
   margin-right: auto;
 }
 
 .box-login {
+  position: relative;
+  margin: 0;
   width: 500px;
   min-height: 200px;
   border: none;
   background-color: white;
   padding: 15px;
   box-sizing: border-box;
-  align-items: center;
-  margin-bottom: 600px;
   background: linear-gradient(180deg, #6594d1a2 0%, rgba(0, 199, 255, 0) 100%);
 }
 
@@ -59,13 +70,6 @@ body {
   padding: 10px;
   margin-bottom: 15px;
   box-sizing: border-box;
-}
-
-.bg-login {
-  display: flex;
-  height: 100vh;
-  justify-content: center;
-  align-items: center;
 }
 
 #id {
