--- a/style2.css
+++ b/style2.css
@@ -30,3 +30,13 @@
   width: 50px;
   height: 50px;
 }
+
+.box {
+  padding: 10px;
+  border: 1px solid;
+  background-color: white;
+  box-sizing: border-box;
+  margin: 10px;
+  width: 70%;
+  margin: 10px auto;
+}
